View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0024170 | Open CASCADE | OCCT:Coding | public | 2013-09-12 18:19 | 2013-12-19 13:57 |
Reporter | Assigned To | ||||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Linux | OS | Debian 4.0 | ||
Product Version | 6.6.0 | ||||
Target Version | 6.7.0 | Fixed in Version | 6.7.0 | ||
Summary | 0024170: Eliminate CLang compiler warning -Wunused local functions | ||||
Description | It is necessary to eliminate warning -Wunused local function, shown by CLang compiler on Ubuntu 13.04 | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
related to | 0024162 | closed | Eliminate CLang compiler warning |
|
Dear abv, Please, review the branch CR24170 |
|
I have reverted change in Visual3d_View.cxx since the code is suspicious and requires additional analysis to be corrected. Apart of this, no remarks, please test |
|
Dear BugMaster, Branch CR24170 was compiled on Linux platform. There is compilation error: http://jenkins-test-02.nnov.opencascade.com:8080/user/mnt/my-views/view/CR24170/job/mnt-CR24170-master_build_occt_linux/1/parsed_console/? ../../../../inc/IntStart_SearchOnBoundaries_2.gxx:72: error: ‘BoundedArc’ was not declared in this scope |
|
I suggest gxx files IntStart_SearchOnBoundaries_1.gxx and IntStart_SearchOnBoundaries_2.gxx should be eliminated, with their code put to main IntStart_SearchOnBoundaries.gxx |
|
Dear abv, Please, review the changes in branch CR24170. |
|
No remarks, please test |
|
Dear BugMaster, Branch CR24170 (and products from GIT master) was compiled on Linux and Windows platforms and tested. SHA-1: bab35ab859eae219e6d4903867c1e32df6ae47a9 Number of compiler warnings: occt component : Linux: 779 (790 on master) Windows: 392 (392 on master) products component : Linux: 190 (190 on master) Windows: 287 (287 on master) Regressions: No regressions Improvements: No improvements Testing cases: Not needed Testing on Linux: Total MEMORY difference: 365530240 / 366361780 Total CPU difference: 43597.40000000098 / 44238.54000000111 Testing on Windows: Total MEMORY difference: 427313660 / 429125892 Total CPU difference: 41323.3125 / 39406.125 There are not differences in images found by testdiff. |
occt: master 74d80fb9 2013-09-17 06:03:19
Committer: abv Details Diff |
0024170: Eliminate CLang compiler warning -Wunused local functions Removed unreferenced local functions -Wunused Removed self assignment Merged IntStart_SearchOnBoundaries*.gxx files into one file. |
Affected Issues 0024170 |
|
mod - src/BRepMesh/BRepMesh_Classifier.cxx | Diff File | ||
mod - src/BRepMesh/BRepMesh_FastDiscret.cxx | Diff File | ||
mod - src/DNaming/DNaming_SelectionDriver.cxx | Diff File | ||
mod - src/Draw/Draw_GraphicCommands.cxx | Diff File | ||
rm - src/IntStart/FILES | Diff File | ||
mod - src/IntStart/IntStart_SearchOnBoundaries.gxx | Diff File | ||
rm - src/IntStart/IntStart_SearchOnBoundaries_1.gxx | Diff File | ||
rm - src/IntStart/IntStart_SearchOnBoundaries_2.gxx | Diff File | ||
mod - src/NCollection/NCollection_IncAllocator.cxx | Diff File | ||
mod - src/QABugs/QABugs_11.cxx | Diff File | ||
mod - src/ShapeAnalysis/ShapeAnalysis_WireOrder.cxx | Diff File | ||
mod - src/TNaming/TNaming_NamedShape.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2013-09-12 18:19 |
|
New Issue | |
2013-09-12 18:19 |
|
Assigned To | => omy |
2013-09-12 18:19 |
|
Relationship added | related to 0024162 |
2013-09-12 18:42 |
|
Note Added: 0025555 | |
2013-09-12 18:42 |
|
Assigned To | omy => abv |
2013-09-12 18:42 |
|
Status | new => resolved |
2013-09-14 05:59 |
|
Note Added: 0025574 | |
2013-09-14 05:59 |
|
Assigned To | abv => bugmaster |
2013-09-14 05:59 |
|
Status | resolved => reviewed |
2013-09-16 16:41 |
|
Assigned To | bugmaster => mkv |
2013-09-17 08:18 |
|
Note Added: 0025594 | |
2013-09-17 08:18 |
|
Test case number | => Not needed |
2013-09-17 08:18 |
|
Assigned To | mkv => omy |
2013-09-17 08:18 |
|
Status | reviewed => assigned |
2013-09-17 09:33 |
|
Note Added: 0025596 | |
2013-09-17 12:17 |
|
Note Added: 0025597 | |
2013-09-17 12:17 |
|
Assigned To | omy => abv |
2013-09-17 12:17 |
|
Status | assigned => resolved |
2013-09-17 12:28 |
|
Note Added: 0025598 | |
2013-09-17 12:28 |
|
Assigned To | abv => bugmaster |
2013-09-17 12:28 |
|
Status | resolved => reviewed |
2013-09-17 15:03 |
|
Assigned To | bugmaster => mkv |
2013-09-18 09:42 |
|
Note Added: 0025623 | |
2013-09-18 09:42 |
|
Assigned To | mkv => bugmaster |
2013-09-18 09:42 |
|
Status | reviewed => tested |
2013-09-20 15:44 |
|
Changeset attached | => occt master 74d80fb9 |
2013-09-20 15:44 |
|
Assigned To | bugmaster => abv |
2013-09-20 15:44 |
|
Status | tested => verified |
2013-09-20 15:44 |
|
Resolution | open => fixed |
2013-12-19 13:52 | bugmaster | Status | verified => closed |
2013-12-19 13:57 | bugmaster | Fixed in Version | => 6.7.0 |
2014-01-11 11:58 |
|
Category | OCCT Release:BUILD => OCCT:Coding |