0024170: Eliminate CLang compiler warning -Wunused local functions

Removed unreferenced local functions -Wunused
Removed self assignment
Merged IntStart_SearchOnBoundaries*.gxx files into one file.