src/NCollection/NCollection_IncAllocator.cxx
@@ -44,8 +44,10 @@ namespace
 
   #define IMEM_FREE(p_bl) (size_t(p_bl->p_end_block - p_bl->p_free_space))
 
+#ifdef DEB
   // auxiliary dummy function used to get a place where break point can be set
   inline void place_for_breakpoint() {}
+#endif
 };
 
 #define MaxLookup 16
